Create datapoint feature
